# multilabel-text-classification

./: Makefile  Pipfile  README.md  docker-compose.yml  params.yaml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
multilabel_text_classification/: __init__.py  dataset.py  features.py  plots.py  preprocessing.py
multilabel_text_classification/entities/: __init__.py  data_params.py  params.py  paths.py  train_params.py
multilabel_text_classification/modeling/: predict.py  train.py  train_multi_cls.py  train_single_cls.py
runs/: events.out.tfevents.1741530504.DESKTOP-L55RPAP.41348.0  events.out.tfevents.1741541158.DESKTOP-L55RPAP.53468.0
