[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "multilabel_text_classification"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "\"iteamurr \u003citeamurr@gmail.com\u003e\"" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["multilabel_text_classification"]
force_sort_within_sections = true
