[tool.poetry]
name = "multilabel_text_classification"
version = "0.1.0"
description = "A short description of the project."
authors = ["iteamurr <iteamurr@gmail.com>"]
readme = "README.md"
packages = [{include = "multilabel_text_classification"}]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
mkdocs = "^1.6.1"
tqdm = "^4.67.1"
typer = "^0.15.2"
pandas = "^2.2.3"
transformers = "^4.49.0"
torch = "^2.6.0"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"
pyyaml = "^6.0.2"
marshmallow = "^3.26.1"
marshmallow-dataclass = "^8.7.1"
tensorboard = "^2.19.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"
pyclean = "^2.2.0"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.pylint.messages_control]
max-line-length = 88
extension-pkg-whitelist = "pydantic"
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.isort]
line_length = 88
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
